--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="group group2">그룹2</div>
     <div class="group group3">그룹3</div>
   </main>
-  <artcle class="slogan">슬로건</artcle>
+  <article class="slogan">슬로건</article>
   <footer class="footer">
     <div class="footer-inner">
       푸터
