--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <header class="header">
     <h1 class="logo">
       <a href="./index-complete.html">
-        <img src="./assets/logo.png" alt=""
+        <img src="./assets/logo.png" alt="" />
+        
       </a>
     </h1>
   </header>
-       <div class="visual">비주얼</div>
+  <div class="visual">비주얼</div>
   <main class="main">
     <div class="group group1">그룹1</div>
     <div class="group group2">그룹2</div>
