--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
   <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
-  <header class="header">헤더</header>
-       <div class="visual">비주얼</div>
+  <header class="header">
+    <!-- 로고  -->
+    <h1 class="logo">
+      <a href="./index-complete.html">
+        <img src="./assets/logo.png" alt="web cafe" />
+      </a>
+    </h1>
+    <ul class="member">
+      <ul class="member">
+        <li><a href="" herf="/">홈</a></li>
+        <li><a href="" herf="/">로그인</a></li>
+        <li><a href="" herf="/">회원가입</a></li>
+        <li><a href="" herf="/">사이트맵</a></li>
+        <li><a href="" herf="/">english</a></li>
+      </ul>
+    </ul>
+
+  </header>
+  <div class="visual">비주얼</div>
   <main class="main">
     <div class="group group1">그룹1</div>
     <div class="group group2">그룹2</div>
