--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </h1>
     <ul class="member">
       <ul class="member">
-        <li><a href="" herf="/">홈</a></li>
-        <li><a href="" herf="/">로그인</a></li>
+        <li><a href="first" herf="/">홈</a></li>
+        <li><span class="icon-colon"></span><a href="" herf="/">로그인</a></li>
         <li><a href="" herf="/">회원가입</a></li>
         <li><a href="" herf="/">사이트맵</a></li>
         <li><a href="" herf="/">english</a></li>
