--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
       </a>
     </h1>
     <ul class="member">
-      <ul class="member">
-        <li><a href="" herf="/">홈</a></li>
-        <li><span class="divider" aria-hidden="true">:</span><a href="" herf="/">로그인</a></li>
-        <li><span class="divider" aria-hidden="true">:</span><a href="" herf="/">회원가입</a></li>
-        <li><span class="divider" aria-hidden="true">:</span><a href="" herf="/">사이트맵</a></li>
-        <li><span class="divider" aria-hidden="true">:</span><a href="" herf="/">english</a></li>
-      </ul>
+      <li><a href="" herf="/">홈</a></li>
+      <li><span class="icon-stop">:</span><a href="" herf="/">로그인</a></li>
+      <li><span class="icon-ok">:</span><a href="" herf="/">회원가입</a></li>
+      <li><span class="icon-plus">:</span><a href="" herf="/">사이트맵</a></li>
+      <li><span class="icon-search">:</span><a href="" herf="/">english</a></li>
     </ul>
 
 
