--- a/index.html
+++ b/index.html
@@ -10,22 +10,18 @@
 </head>
 <body>
   <header class="header">
-    <!-- 로고  -->
     <h1 class="logo">
       <a href="./index-complete.html">
         <img src="./assets/logo.png" alt="web cafe" />
       </a>
     </h1>
     <ul class="member">
-      <ul class="member">
-        <li><a href="first" herf="/">홈</a></li>
-        <li><span class="icon-colon"></span><a href="" herf="/">로그인</a></li>
-        <li><a href="" herf="/">회원가입</a></li>
-        <li><a href="" herf="/">사이트맵</a></li>
-        <li><a href="" herf="/">english</a></li>
-      </ul>
+      <li><a href="/">홈</a></li>
+      <li><span class="icon-stop"></span><a href="/">로그인</a></li>
+      <li><span class="icon-ok"></span><a href="/">회원가입</a></li>
+      <li><span class="icon-plus"></span><a href="/">사이트맵</a></li>
+      <li><span class="icon-search"></span><a href="/">english</a></li>
     </ul>
-
   </header>
   <div class="visual">비주얼</div>
   <main class="main">
