--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
   </header>
   <div class="visual">
     <div class="visual-text">
-      Web Standards &amp; Accessibility
+      Web standards &amp; Accessibility
     </div>
   </div>
   <main class="main">
     <div class="group group1">
       <section class="login">
-        <h2 class="login-tittle">로그인</h2>
+        <h2 class="login-title">로그인</h2>
         <form action="" class="login-form">
           <fieldset>
             <legend>회원 로그인 폼</legend>
