--- a/index.html
+++ b/index.html
@@ -12,143 +12,25 @@
   <script src="./js/menu-tab.js"></script> -->
 </head>
 <body>
-  <header class="header">
-    <h1 class="logo">
-      <a href="./index-complete.html">
-        <img src="./assets/logo.png" alt="web cafe" />
-      </a>
-    </h1>
-    <ul class="member">
-      <li><a href="/">홈</a></li>
-      <li><span class="divider" aria-hidden="true">:</span><a href="/">로그인</a></li>
-      <li><span class="divider" aria-hidden="true">:</span><a href="/">회원가입</a></li>
-      <li><span class="divider" aria-hidden="true">:</span><a href="/">사이트맵</a></li>
-      <li><span class="divider" aria-hidden="true">:</span><a href="/">english</a></li>
-    </ul>
-    <nav class="navigation">
-      <h2 class="a11y-hidden">메인 메뉴</h2>
-      <ul class="menu">
-        <li class="menu-item is-active">
-          <button type="button" class="menu-button">HTML에 대해</button>
-          <ul class="sub-menu menu-html">
-            <li>
-              <a href="/">HTML5 소개</a>
-            </li>
-            <li>
-              <a href="/">레퍼런스 소개</a>
-            </li>
-            <li>
-              <a href="/">활용예제</a>
-            </li>
-          </ul>
-        </li>
-        <li class="menu-item">
-          <button type="button" class="menu-button">CSS에 대해</button>
-          <ul class="sub-menu menu-css">
-            <li>
-              <a href="/">CSS 소개</a>
-            </li>
-            <li>
-              <a href="/">CSS2 VS CSS3</a>
-            </li>
-            <li>
-              <a href="/">CSS 애니메이션</a>
-            </li>
-            <li>
-              <a href="/">CSS Framework</a>
-            </li>
-          </ul>
-        </li>
-        <li class="menu-item">
-          <button type="button" class="menu-button">웹표준</button>
-          <ul class="sub-menu menu-standards">
-            <li>
-              <a href="/">웹표준 이란?</a>
-            </li>
-            <li>
-              <a href="/">W3C</a>
-            </li>
-            <li>
-              <a href="/">HTML5의 현재와 미래</a>
-            </li>
-          </ul>
-        </li>
-        <li class="menu-item">
-          <button type="button" class="menu-button">웹 접근성</button>
-          <ul class="sub-menu menu-accessibility">
-            <li>
-              <a href="/">웹 접근성의 개요</a>
-            </li>
-            <li>
-              <a href="/">장애 환경의 이해</a>
-            </li>
-            <li>
-              <a href="/">장차법</a>
-            </li>
-            <li>
-              <a href="/">웹 접근성 품질마크</a>
-            </li>
-          </ul>
-        </li>
-        <li class="menu-item">
-          <button type="button" class="menu-button">묻고 답하기</button>
-          <ul class="sub-menu menu-qna">
-            <li>
-              <a href="/">묻고 답하기</a>
-            </li>
-            <li>
-              <a href="/">FAQ</a>
-            </li>
-            <li>
-              <a href="/">1대1 질문</a>
-            </li>
-            <li>
-              <a href="/">웹표준</a>
-            </li>
-            <li>
-              <a href="/">웹 접근성</a>
-            </li>
-          </ul>
-        </li>
-        <li class="menu-item">
-          <button type="button" class="menu-button">자료실</button>
-          <ul class="sub-menu menu-archive">
-            <li>
-              <a href="/">공개 자료실</a>
-            </li>
-            <li>
-              <a href="/">이미지 자료실</a>
-            </li>
-            <li>
-              <a href="/">웹표준 자료실</a>
-            </li>
-            <li>
-              <a href="/">웹 접근성 자료실</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <div class="visual">
-    <div class="visual-text">
-      Web standards &amp; Accessibility
-    </div>
-  </div>
   <main class="main">
     <div class="group group1">
       <section class="login">
         <h2 class="login-title">로그인</h2>
-        <form action="" class="login-form">
+        <form method="POST" action="https://formspree.io/seulbinim@gmail.com" class="login-form">
           <fieldset>
             <legend>회원 로그인 폼</legend>
             <div class="user-email">
               <label for="userEmail">아이디</label>
-              <input type="email" id="userEmail" />
+              <input type="email" id="userEmail" name="userEmail" placeholder="fe@euid.dev" required />
             </div>
+            <div class="user-pw">
+              <label for="userPw">비밀번호</label>
+              <input type="password" id="userPw" name="userPw" placeholder="8자리 이상" required />
+            </div>
+            <button type="submit" class="login-button">로그인</button>
           </fieldset>
         </form>
-        <ul class="sign">
+        <ul class="sign"> 
           <li><a href="/">회원가입</a></li>
           <li><a href="/">아이디/비밀번호 찾기</a></li>
         </ul>
