--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
     <div class="group group1">
       <section class="login">
         <h2 class="login-title">로그인</h2>
-        <form action="" class="login-form">
+        <form method="POST" action="https://formspree.io/seulbinim@gmail.com" class="login-form">
           <fieldset>
-            <legend>회원 로그인 폼</legend>
+            <!-- <legend>회원 로그인 폼</legend> -->
             <div class="user-email">
               <label for="userEmail">아이디</label>
               <input type="email" id="userEmail" name="userEmail" placeholder="fe@euid.dev" required />
